--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -318,6 +318,7 @@ td {
 	flex-direction: row;
 	justify-content: space-between;
 	box-shadow: var(--borderShadowColorEffect);
+	border-radius: 5px;
 }
 
 #CloseUp output {
@@ -429,35 +430,73 @@ td {
 /*---------------------*/
 
 /**-----------------------------------------------**/
-#sitePopup {
+.popup {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 2;
 	display: none;
+	backdrop-filter: blur(3px);
 }
 
-#sitePopup .infoContainer {
+.popup > .infoContainer {
 	transition: var(--transitionTime);
 	position: fixed;
 	z-index: 1;
 	background-color: var(--background_B);
-	padding: 1rem;
 	border: 1px solid #888;
+	padding: 1rem;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	min-width: 300px;
+
+	width: 25%;
+	height: 55%;
+
+	border-radius: 5px;
+}
+
+.widePopup > .infoContainer {
 	width: 55%;
 	height: 85%;
 }
+/**-----------------------------------------------**/
+#sitePopup {
+	z-index: 2;
+}
 
-#sitePopup .infoContainer iframe {
+#sitePopup > .infoContainer > iframe {
+	border: none;
+	border-radius: 5px;
 	width: 100%;
 	height: 95%;
+}
+/**-----------------------------------------------**/
+#infoPopup {
+	z-index: 1;
+}
+
+#infoPopup > .infoContainer hr {
+	margin: 10px 0;
+	border: none;
+	border-top: 1px solid #676666;
+}
+
+#infoPopup > .infoContainer div {
+	display: flex;
+	justify-content: space-between;
+}
+
+.close-btn {
+	color: gray;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: var(--transitionTime);
 }
 
 /**-----------------------------------------------**/
@@ -490,54 +529,6 @@ td {
 	;
 	border-radius: 50%;
 	transform: translate(40%, 40%);
-}
-
-/**-----------------------------------------------**/
-#infoPopup {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 1;
-	display: none;
-}
-
-#infoPopup .infoContainer {
-	transition: var(--transitionTime);
-	position: fixed;
-	z-index: 1;
-	background-color: var(--background_B);
-	border: 1px solid #888;
-	padding: 1rem;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	overflow: auto;
-	min-width: 300px;
-	width: 25%;
-	height: 55%;
-}
-
-#infoPopup .infoContainer hr {
-	margin: 10px 0;
-	border: none;
-	border-top: 1px solid #676666;
-}
-
-#infoPopup .infoContainer div {
-	display: flex;
-	justify-content: space-between;
-}
-
-.close {
-	color: gray;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-	cursor: pointer;
-	transition: var(--transitionTime);
 }
 
 /**-----------------------------------------------**/
@@ -617,7 +608,7 @@ option:hover {
 }
 
 /**-----------------**/
-.close:hover {
+.close-btn:hover {
 	color: var(--danger);
 	text-decoration: none;
 }
@@ -625,17 +616,19 @@ option:hover {
 /**-----------------------------------------------**/
 @media only screen and (max-width: 500px),
 only screen and (max-height: 550px) {
-	#infoPopup .infoContainer {
+	.popup > .infoContainer {
 		width: 100%;
 		height: 100%;
+		border-radius: 0px;
 	}
 }
 
 @media only screen and (max-width: 1000px),
 only screen and (max-height: 650px) {
-	#sitePopup .infoContainer {
+	.widePopup > .infoContainer {
 		width: 100%;
 		height: 100%;
+		border-radius: 0px;
 	}
 }
 
