--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -492,6 +492,11 @@ td {
 	border-color: var(--textColor_C);
 }
 
+#infoPopup > .infoContainer h3 {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 .close-btn {
 	color: gray;
 	float: right;
