--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -266,6 +266,26 @@ td {
 	flex-direction: column;
 	opacity: 1;
 	color: var(--textColor_B);
+	position: relative;
+    overflow: hidden;
+}
+
+.radioactive::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    flex: none;
+    background: repeating-linear-gradient(
+        -45deg,
+        transparent,
+        transparent 6px,
+        var(--radioactive) 6px,
+        var(--radioactive) 12px
+    );
+    z-index: 0;
 }
 
 .element *,
@@ -274,6 +294,7 @@ td {
 .lanth-Act * {
 	pointer-events: none;
 	user-select: none;
+	z-index: 1;
 }
 
 .element,
@@ -320,6 +341,8 @@ td {
 	justify-content: space-between;
 	box-shadow: var(--borderShadowColorEffect);
 	border-radius: 5px;
+	position: relative;
+    overflow: hidden;
 }
 
 #CloseUp output {
@@ -440,12 +463,12 @@ td {
 	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 	backdrop-filter: blur(3px);
+	z-index: 10;
 }
 
 .popup > .infoContainer {
 	transition: var(--transitionTime);
 	position: fixed;
-	z-index: 1;
 	background-color: var(--background_B);
 	border: 1px solid #888;
 	padding: 1rem;
@@ -465,9 +488,6 @@ td {
 	height: 85%;
 }
 /**-----------------------------------------------**/
-#sitePopup {
-	z-index: 2;
-}
 
 #sitePopup > .infoContainer > iframe {
 	border: none;
@@ -476,9 +496,6 @@ td {
 	height: 95%;
 }
 /**-----------------------------------------------**/
-#infoPopup {
-	z-index: 1;
-}
 
 #infoPopup > .infoContainer hr {
 	margin: 10px 0;
@@ -496,6 +513,28 @@ td {
 #infoPopup > .infoContainer h3 {
 	margin-top: 5px;
 	margin-bottom: 5px;
+	z-index: 1;
+    position: relative;
+}
+
+#infoPopup > .infoContainer img {
+	width: 100%;
+	height: 40px;
+}
+
+#infoPopup > .infoContainer > .popup-data .radioactive {
+	position: relative;
+    overflow: hidden;
+}
+
+#infoPopup > .infoContainer > .popup-data .radioactive::before {
+	background: repeating-linear-gradient(
+		-45deg,
+		transparent,
+		transparent 6px,
+		#ffa60080 6px,
+		#ffa60080 12px
+	);
 }
 
 .close-btn {
