--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -596,7 +596,12 @@ td {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
 	transform-style: preserve-3d;
+
+	will-change: transform;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 #atom .electron {
@@ -739,14 +744,38 @@ only screen and (max-height: 650px) {
 }
 
 @keyframes spin {
-	100% {
-		transform: translate(-50%, -50%) rotateZ(360deg);
+	from {
+		transform: translate(-50%, -50%) rotate(0deg);
+	}
+	to {
+		transform: translate(-50%, -50%) rotate(360deg);
 	}
 }
 
 @keyframes spin3d {
-	100% {
-		transform: translate(-50%, -50%) rotateZ(360deg) rotateX(360deg) rotateY(360deg);
+	from {
+		transform: translate(-50%, -50%) rotate(0deg) rotateX(0deg) rotateY(0deg);
+	}
+	to {
+		transform: translate(-50%, -50%) rotate(360deg) rotateX(360deg) rotateY(360deg);
+	}
+}
+
+@-webkit-keyframes spin {
+	from {
+		-webkit-transform: translate(-50%, -50%) rotate(0deg);
+	}
+	to {
+		-webkit-transform: translate(-50%, -50%) rotate(360deg);
+	}
+}
+
+@-webkit-keyframes spin3d {
+	from {
+		-webkit-transform: translate(-50%, -50%) rotate(0deg) rotateX(0deg) rotateY(0deg);
+	}
+	to {
+		-webkit-transform: translate(-50%, -50%) rotate(360deg) rotateX(360deg) rotateY(360deg);
 	}
 }
 
