--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -6,7 +6,7 @@
 	--hoverShadow: 0 0 10px var(--hoverColor);
 
 	--borderShadowColorEffectHover: inset 0 0 0 2px #0099ff;
-	;
+
 	--borderShadowColorEffectClick: inset 0 0 0 2px #ff4a4a;
 
 	--transitionTime: 0.3s;
@@ -30,6 +30,7 @@ body {
 	color: var(--textColor_A);
 
 	font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
+	font-size: 16px;
 
 	transition: background var(--transitionTime);
 }
@@ -109,7 +110,7 @@ input[type="range"]::-webkit-slider-thumb {
 	height: 16px;
 	border-radius: 50%;
 	background-color: rgb(63, 155, 132);
-	border: 1px solid rgb(66, 80, 75)
+	border: 1px solid rgb(66, 80, 75);
 }
 
 /*Firefox*/
@@ -134,7 +135,7 @@ input[type="range"]::-moz-range-thumb {
 	height: 16px;
 	border-radius: 50%;
 	background-color: rgb(63, 155, 132);
-	border: 1px solid rgb(66, 80, 75)
+	border: 1px solid rgb(66, 80, 75);
 }
 
 select,
@@ -178,26 +179,6 @@ select:open::picker-icon {
 
 optgroup {
 	background: #00000040;
-}
-
-/*Firefox*/
-@-moz-document url-prefix() {
-	select {
-		all: unset;
-		display: inline-block;
-		color: #ffffff;
-		background: var(--primary_A);
-		box-shadow: var(--borderShadowColorEffect);
-		border-radius: 4px;
-		margin: 4px 2px;
-		padding: 4px;
-		font-size: 16px;
-	}
-
-	select:disabled {
-		color: gray;
-		background-color: #eee;
-	}
 }
 
 /**---------------------------**/
@@ -357,6 +338,7 @@ td {
 .element *,
 .elementStyle *,
 #CloseUp *,
+#CloseUp2 *,
 .lanth-Act * {
 	pointer-events: none;
 	user-select: none;
@@ -394,7 +376,8 @@ td {
 }
 
 /**--------------------**/
-#CloseUp {
+#CloseUp,
+#CloseUp2 {
 	line-height: 1;
 	font-style: normal;
 	font-weight: normal;
@@ -411,7 +394,8 @@ td {
 	overflow: hidden;
 }
 
-#CloseUp output {
+#CloseUp output,
+#CloseUp2 output {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -419,22 +403,26 @@ td {
 	min-width: 0;
 }
 
-#CloseUp b {
+#CloseUp b,
+#CloseUp2 b {
 	font-size: 1em;
 }
 
-#CloseUp abbr {
+#CloseUp abbr,
+#CloseUp2 abbr {
 	font-size: 1.8em;
 	font-weight: 600;
 }
 
-#CloseUp em {
+#CloseUp em,
+#CloseUp2 em {
 	font-size: .8em;
 	font-weight: 500;
 	font-style: normal;
 }
 
-#CloseUp data {
+#CloseUp data,
+#CloseUp2 data {
 	font-size: .8em;
 	font-weight: 400;
 	font-style: normal;
@@ -632,7 +620,7 @@ td {
 	left: 50%;
 	border-radius: 50%;
 	background-color: #888;
-	transform: translate(-50%);
+	transform: translate(-50%, 0%);
 	box-shadow: var(--borderShadowColorEffect);
 	font-size: 12px;
 	display: flex;
@@ -654,7 +642,6 @@ td {
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
 	transform-style: preserve-3d;
-
 	will-change: transform;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -736,13 +723,15 @@ option:hover {
 /**-----------------**/
 #periodicTable .element:not(.empty):hover,
 .elementStyle:not(.empty):hover,
-#CloseUp:hover {
+#CloseUp:hover,
+#CloseUp2:hover {
 	box-shadow: var(--borderShadowColorEffectHover);
 }
 
 #periodicTable .element:not(.empty):active,
 .elementStyle:not(.empty):active,
-#CloseUp:active {
+#CloseUp:active,
+#CloseUp2:active {
 	box-shadow: var(--borderShadowColorEffectClick);
 }
 
@@ -781,6 +770,40 @@ option:hover {
 }
 
 /**-----------------------------------------------**/
+@media (pointer: coarse) {
+	input[type="range"]::-webkit-slider-thumb {
+		width: 20px;
+		height: 20px;
+	}
+
+	input[type="range"]::-moz-range-thumb {
+		width: 20px;
+		height: 20px;
+	}
+}
+
+
+@-moz-document url-prefix() {
+
+	/*Firefox*/
+	select {
+		all: unset;
+		display: inline-block;
+		color: #ffffff;
+		background: var(--primary_A);
+		box-shadow: var(--borderShadowColorEffect);
+		border-radius: 4px;
+		margin: 4px 2px;
+		padding: 4px;
+		font-size: 16px;
+	}
+
+	select:disabled {
+		color: gray;
+		background-color: #eee;
+	}
+}
+
 @media only screen and (max-width: 500px),
 only screen and (max-height: 550px) {
 	.popup>.infoContainer {
@@ -796,6 +819,13 @@ only screen and (max-height: 650px) {
 		width: 100%;
 		height: 100%;
 		border-radius: 0px;
+	}
+}
+
+@media (prefers-reduced-motion: reduce) {
+	body * {
+		animation: none !important;
+		transition: none !important;
 	}
 }
 
@@ -900,19 +930,19 @@ only screen and (max-height: 650px) {
 	background: var(--f-block);
 }
 
-body:has(#periodicTable[data-mode="blocks"]) #CloseUp.s {
+body:has(#periodicTable[data-mode="blocks"]) [id^="CloseUp"].s {
 	background: var(--s-block);
 }
 
-body:has(#periodicTable[data-mode="blocks"]) #CloseUp.p {
+body:has(#periodicTable[data-mode="blocks"]) [id^="CloseUp"].p {
 	background: var(--p-block);
 }
 
-body:has(#periodicTable[data-mode="blocks"]) #CloseUp.d {
+body:has(#periodicTable[data-mode="blocks"]) [id^="CloseUp"].d {
 	background: var(--d-block);
 }
 
-body:has(#periodicTable[data-mode="blocks"]) #CloseUp.f {
+body:has(#periodicTable[data-mode="blocks"]) [id^="CloseUp"].f {
 	background: var(--f-block);
 }
 
