--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -14,15 +14,15 @@
 
 /**------------------------------------------------**/
 * {
+	box-sizing: inherit;
+}
+
+html {
+	height: 100%;
 	box-sizing: border-box;
 }
 
 body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 
@@ -33,6 +33,16 @@ body {
 	font-size: 16px;
 
 	transition: background var(--transitionTime);
+
+	height: 100%;
+	min-height: 100%;
+}
+
+main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 /**-----------------------------------------------**/
@@ -182,12 +192,17 @@ optgroup {
 }
 
 /**---------------------------**/
-.header {
+.header,
+.footer {
 	display: flex;
 	align-items: center;
 	width: 100%;
 	height: 60px;
 	justify-content: center;
+}
+
+.footer {
+	background: var(--githubBG);
 }
 
 .vertical-line {
